@@ -1,3 +1,7 @@
+drkns 26.10.2020 18:02:12 +0000 - build 5692
+
+1. Forum: 5688 freezes in disks menu if a network drive is not available.
+
 drkns 26.10.2020 02:03:19 +0000 - build 5691
 
 1. Correction of 5683.
