@@ -1,3 +1,7 @@
+drkns 26.10.2020 18:02:12 +0000 - build 5692
+
+1. С форума: 5688 подвисает в меню дисков, если сетевой диск не доступен.
+
 drkns 26.10.2020 02:03:19 +0000 - build 5691
 
 1. Уточнение 5683.
